--- a/alayatodo/templates/todos.html
+++ b/alayatodo/templates/todos.html
@@ -44,6 +44,15 @@
                         <button type="submit" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove glyphicon-white"></span></button>
                     </form>
                 </td>
+                <td>
+                    <form  onsubmit="return confirm('Are you sure you want to change the status?');" method="post" action="{{ url_for('changeStatus_POST', id=todo.id) }}">
+                        {% if todo.is_complete == 1 %}
+                            <button type="submit" class="btn btn-xs btn-success">Complete</button>
+                            {% else %}
+                            <button type="submit" class="btn btn-xs btn-danger">Incomplete</button>
+                            {% endif %}
+                    </form>
+                </td>
             </tr>
         {% endfor %}
         <tr>
